--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@material-ui/icons": "^4.5.1",
     "ajv": "^6.10.2",
     "colors": "^1.3.3",
+    "idb": "^4.0.5",
     "next": "^8.1.0",
     "next-i18next": "^2.0.0",
     "react": "^16.8.6",
