--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "enzyme-adapter-react-16": "^1.13.1",
     "file-loader": "^4.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "git-revision-webpack-plugin": "^3.0.4",
     "jest": "^24.8.0",
     "jest-enzyme": "^7.0.2",
     "jest-styled-components": "^6.3.1",
